--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
     <script src="js/value/configValue.js"></script>
   </head>
   <body ng-controller="taskListCtrl">
-    <div class="jumbotron">
-      <h3>{{app}}</h3>
-      <input
-        class="form-control"
-        type="text"
-        ng-model="searchBy"
-        placeholder="Insira um filtro"
-      />
+    <div class="container">
+      <div class="header">
+        <div class="float-start">
+          <h3>{{app}}</h3>
+        </div>
+        <div class="float-end">
+          <input
+            class="form-control"
+            type="text"
+            ng-model="searchBy"
+            placeholder="Insira um filtro"
+          />
+        </div>
+      </div>
       <table ng-show="tasks.length > 0" class="table table-striped">
         <tr>
           <th><a href="" ng-click="filterBy('name')">Nome</a></th>
