--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Task List</title>
-    <link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-messages.js"></script>
     <script src="js/app.js"></script>
@@ -13,92 +22,160 @@
   </head>
   <body ng-controller="taskListCtrl">
     <div class="container">
-      <div class="header">
-        <div class="float-start">
-          <h3>{{app}}</h3>
+      <div class="card">
+        <div class="card-header">
+          <div class="float-start">
+            <h3>{{app}} Pendente</h3>
+          </div>
+          <div class="float-end">
+            <input
+              class="form-control"
+              type="text"
+              ng-model="searchBy"
+              placeholder="Insira um filtro"
+            />
+          </div>
         </div>
-        <div class="float-end">
-          <input
-            class="form-control"
-            type="text"
-            ng-model="searchBy"
-            placeholder="Insira um filtro"
-          />
+        <div class="card-body">
+          <div
+            style="text-align: center; padding: 2rem"
+            ng-show="!openTasks.length"
+          >
+            <span>Não foram localizados dados</span>
+          </div>
+          <table ng-show="openTasks.length > 0" class="table table-striped">
+            <tr>
+              <th><a href="" ng-click="filterBy('name')">Nome</a></th>
+              <th><a href="" ng-click="filterBy('email')">Email</a></th>
+              <th>
+                <a href="" ng-click="filterBy('description')">Descrição</a>
+              </th>
+              <th></th>
+            </tr>
+            <tr
+              ng-repeat="task in openTasks | filter:searchBy | orderBy:orderField:orderBy"
+            >
+              <td>{{task.name}}</td>
+              <td>{{task.email}}</td>
+              <td>{{task.description}}</td>
+              <td>
+                <button class="btn btn-success" ng-click="finishTask(task)">
+                  Finalizar tarefa
+                </button>
+              </td>
+            </tr>
+          </table>
+          <hr />
+          <form name="taskForm">
+            <input
+              class="form-control"
+              type="text"
+              ng-model="task.name"
+              name="name"
+              placeholder="Nome do responsável"
+              ng-required="true"
+            />
+            <input
+              class="form-control"
+              type="text"
+              ng-model="task.email"
+              name="email"
+              placeholder="E-mail do responsável"
+              ng-required="true"
+            />
+            <input
+              class="form-control"
+              type="text"
+              ng-model="task.description"
+              name="description"
+              placeholder="Descrição da tarefa"
+              ng-required="true"
+            />
+          </form>
+          <div
+            ng-show="taskForm.name.$dirty"
+            ng-messages="taskForm.name.$error"
+          >
+            <div ng-message="required" class="alert alert-danger">
+              Por favor, informe o nome do responsável.
+            </div>
+          </div>
+          <div
+            ng-show="taskForm.email.$dirty"
+            ng-messages="taskForm.email.$error"
+          >
+            <div ng-message="required" class="alert alert-danger">
+              Por favor, informe o e-mail do responsável.
+            </div>
+          </div>
+          <div
+            ng-show="taskForm.description.$dirty"
+            ng-messages="taskForm.description.$error"
+          >
+            <div ng-message="required" class="alert alert-danger">
+              Por favor, informe a descrição da tarefa.
+            </div>
+          </div>
+          <div ng-show="message">
+            <div class="alert alert-danger">{{message}}</div>
+          </div>
+          <button
+            class="btn btn-primary btn-block"
+            ng-click="addTask(task)"
+            ng-disabled="taskForm.$invalid"
+          >
+            Adicionar tarefa
+          </button>
         </div>
       </div>
-      <table ng-show="tasks.length > 0" class="table table-striped">
-        <tr>
-          <th><a href="" ng-click="filterBy('name')">Nome</a></th>
-          <th><a href="" ng-click="filterBy('email')">Email</a></th>
-          <th><a href="" ng-click="filterBy('description')">Descrição</a></th>
-          <th></th>
-        </tr>
-        <tr
-          ng-repeat="task in tasks | filter:searchBy | orderBy:orderField:orderBy"
-        >
-          <td>{{task.name}}</td>
-          <td>{{task.email}}</td>
-          <td>{{task.description}}</td>
-          <td>BOTÃO</td>
-        </tr>
-      </table>
-      <hr />
-      <form name="taskForm">
-        <input
-          class="form-control"
-          type="text"
-          ng-model="task.name"
-          name="name"
-          placeholder="Nome do responsável"
-          ng-required="true"
-        />
-        <input
-          class="form-control"
-          type="text"
-          ng-model="task.email"
-          name="email"
-          placeholder="E-mail do responsável"
-          ng-required="true"
-        />
-        <input
-          class="form-control"
-          type="text"
-          ng-model="task.description"
-          name="description"
-          placeholder="Descrição da tarefa"
-          ng-required="true"
-        />
-      </form>
-
-      <div ng-show="taskForm.name.$dirty" ng-messages="taskForm.name.$error">
-        <div ng-message="required" class="alert alert-danger">
-          Por favor, informe o nome do responsável.
-        </div>
-      </div>
-      <div ng-show="taskForm.email.$dirty" ng-messages="taskForm.email.$error">
-        <div ng-message="required" class="alert alert-danger">
-          Por favor, informe o e-mail do responsável.
-        </div>
-      </div>
-      <div
-        ng-show="taskForm.description.$dirty"
-        ng-messages="taskForm.description.$error"
-      >
-        <div ng-message="required" class="alert alert-danger">
-          Por favor, informe a descrição da tarefa.
-        </div>
-      </div>
-      <div>{{message}}</div>
-      <button
-        class="btn btn-primary btn-block"
-        ng-click="addTask(task)"
-        ng-disabled="taskForm.$invalid"
-      >
-        Adicionar tarefa
-      </button>
     </div>
-    <div style="text-align: center">
-      <span>Página criada por Luiz Rogério</span>
+    <br />
+    <div class="container">
+      <div class="card">
+        <div class="card-header">
+          <div class="float-start">
+            <h3>{{app}} Finalizado</h3>
+          </div>
+          <div class="float-end">
+            <input
+              class="form-control"
+              type="text"
+              ng-model="closedSearchBy"
+              placeholder="Insira um filtro"
+            />
+          </div>
+        </div>
+        <div class="card-body">
+          <div
+            style="text-align: center; padding: 2rem"
+            ng-show="!closedTasks.length"
+          >
+            <span>Não foram localizados dados</span>
+          </div>
+          <table ng-show="closedTasks.length > 0" class="table table-striped">
+            <tr>
+              <th><a href="" ng-click="filterBy('name')">Nome</a></th>
+              <th><a href="" ng-click="filterBy('email')">Email</a></th>
+              <th>
+                <a href="" ng-click="filterBy('description')">Descrição</a>
+              </th>
+              <th></th>
+            </tr>
+            <tr
+              ng-repeat="task in closedTasks | filter:closedSearchBy | orderBy:orderField:orderBy"
+            >
+              <td>{{task.name}}</td>
+              <td>{{task.email}}</td>
+              <td>{{task.description}}</td>
+              <td>
+                <button class="btn btn-danger" ng-click="finishTask(task)">
+                  Reabrir tarefa
+                </button>
+              </td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </div>
   </body>
 </html>
