--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <td>{{task.email}}</td>
               <td>{{task.description}}</td>
               <td>
-                <button class="btn btn-danger" ng-click="finishTask(task)">
+                <button class="btn btn-danger" ng-click="reopenTask(task)">
                   Reabrir tarefa
                 </button>
               </td>
