Create password input to reopen a task

--- a/index.html
+++ b/index.html
@@ -22,6 +22,54 @@
   </head>
   <body ng-controller="taskListCtrl">
     <div class="container">
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Atenção</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <h4>Para reabrir a tarefa insira a senha de ADM</h4>
+              <input
+                class="form-control"
+                type="password"
+                ng-model="password"
+                name="password"
+                placeholder="Senha do responsável"
+              />
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button
+                class="btn btn-danger"
+                ng-click="reopenTask(password)"
+                data-bs-dismiss="modal"
+              >
+                Confirmar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="card">
         <div class="card-header">
           <div class="float-start">
@@ -168,7 +216,13 @@
               <td>{{task.email}}</td>
               <td>{{task.description}}</td>
               <td>
-                <button class="btn btn-danger" ng-click="reopenTask(task)">
+                <button
+                  type="button"
+                  class="btn btn-danger"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                  ng-click="selectId(task)"
+                >
                   Reabrir tarefa
                 </button>
               </td>
