--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@
           >
             Adicionar tarefa
           </button>
+          <button
+            class="btn btn-outline-danger btn-block"
+            ng-click="addRandomTask()"
+          >
+            Adicionar tarefas Aleatorias
+          </button>
         </div>
       </div>
     </div>
