--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 class="btn btn-secondary"
                 data-bs-dismiss="modal"
               >
-                Close
+                Fechar
               </button>
               <button
                 class="btn btn-danger"
@@ -178,7 +178,7 @@
             class="btn btn-outline-danger btn-block"
             ng-click="addRandomTask()"
           >
-            Adicionar tarefas Aleatorias
+            Estou sem tarefas
           </button>
         </div>
       </div>
